[package]
name = "nevy"
version = "0.1.0-dev"
edition = "2021"
categories = ["network-programming", "game-development"]
description = "Simple, expressive networking for your bevy games"
keywords = ["netcode", "networking", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DrewRidley/nevy"
documentation = "https://docs.rs/nevy"

[dependencies]
bevy_interface.path = "./crates/bevy_interface"

[workspace]
members = ["crates/*"]
default-members = [
    "crates/bevy_interface",
    "crates/nevy_quic",
    "crates/nevy_web_transport",
    "crates/transport_interface",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.13", default-features = false }
