[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "nevy"
version = "0.1.0-dev"
edition = "2021"
categories = ["network-programming", "game-development"]
description = "Simple, expressive networking for your bevy games"
keywords = ["netcode", "networking", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DrewRidley/nevy"
documentation = "https://docs.rs/nevy"

[features]
quic = ["nevy_quic"]
web_transport = ["nevy_web_transport"]

[dependencies]
transport_interface.path = "./crates/transport_interface"
bevy_interface.path = "./crates/bevy_interface"
nevy_messaging.path = "./crates/nevy_messaging"
nevy_quic = { path = "./crates/nevy_quic", optional = true }
nevy_web_transport = { path = "./crates/nevy_web_transport", optional = true }

[workspace.dependencies]
bevy = { version = "0.13", default-features = false }
