[package]
name = "nevy_wasm"
version = "0.1.0"
edition = "2021"


[dependencies]
transport_interface.path = "../transport_interface"
web-transport-wasm = { git = "https://github.com/kixelated/web-transport-rs" }
slotmap = "1.0.7"
futures-lite = "2.3.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportDatagramDuplexStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
]
