[package]
name = "nevy_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
transport_interface = { path = "../transport_interface" }
web-sys = { version = "0.3", features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportDatagramDuplexStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
futures-lite = "1.12"
bytes = "1.6.0"
slotmap = "1.0.7"
log = "0.4.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"
