[package]
name = "transport_quic"
version = "0.1.0"
edition = "2021"

[dependencies]
transport_interface.path = "../transport_interface"
quinn-proto = { version = "0.11", features = ["rustls"] }
quinn-udp = "0.5"
bytes = "1.6.0"
log = "0.4.21"

[dev-dependencies]
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2.1.2"
rustls-platform-verifier = "0.3.1"
